--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,7 +1,7 @@
 @media (max-width: 575.98px) {
   body h1 {
-    font-size: 20px;
-    line-height: 23px;
+    font-size: 20px !important;
+    line-height: 23px !important;
   }
   .home-catalog .catalog-grid {
     grid-template-columns: 1fr;
@@ -49,16 +49,28 @@
     h1 {
       margin-bottom: 44px;
     }
+
     .program-descr-wrap {
       padding: 35px 15px 40px;
     }
+
     h2 {
       margin-bottom: 30px;
     }
   }
-
+  body .certificates {
+    h1 {
+      margin-bottom: 44px;
+    }
+    .docs-grid p {
+      font-size: 12px;
+      line-height: 18px;
+    }
+    .docs-grid .card img {
+      max-height: 248px;
+    }
+  }
 }
-
 
 @media (max-width: 767.98px) {
   main {
@@ -165,6 +177,11 @@
   .news {
     background: linear-gradient(89.24deg, #FFFFFF 3.49%, rgba(97, 194, 239, 0.4) 99.37%);
   }
+  header .header-btm {
+    .logo-sm {
+      display: block;
+    }
+  }
 }
 
 @media (max-width: 991.98px) {
@@ -209,6 +226,8 @@
     p {
       margin-left: 0;
       margin-top: 30px;
+      font-size: 14px;
+      line-height: 21px;
     }
   }
   .catalog-item {
@@ -240,6 +259,7 @@
   .news-item {
     padding-bottom: 120px;
     z-index: 2;
+
     .gradient-btn {
       margin-bottom: 55px;
     }
@@ -253,6 +273,14 @@
   .program {
     h1 {
       margin-bottom: 48px;
+    }
+  }
+  .certificates {
+    h1 {
+      margin-bottom: 48px;
+    }
+    .docs-grid .card {
+      padding: 30px 15px 14px;
     }
   }
 }
@@ -276,6 +304,7 @@
         box-shadow: 0px 0px 8px #C4C4C4;
         border-radius: 4px;
       }
+
     }
 
     .drop-menu {
@@ -296,6 +325,13 @@
     .nav-item:hover:after {
       display: none
     }
+    nav {
+      order: 3;
+    }
+  }
+
+  .header-top {
+    display: none;
   }
   .contacts-col {
     margin-bottom: 60px;
@@ -363,5 +399,15 @@
       }
     }
   }
+  header.scrolled .header-btm {
+    .logo-sm {
+      display: block;
+    }
+  }
+}
 
+@media (min-width: 768px) and (max-width: 1199.98px) {
+  .header-btm .logo {
+    display: block !important;
+  }
 }
