--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,6 +80,12 @@ textarea {
   }
 }
 
+button {
+  &:focus {
+    outline: none;
+  }
+}
+
 .gradient-btn {
   cursor: pointer;
   text-align: center;
@@ -197,8 +203,6 @@ textarea {
   }
 
   .nav {
-    margin-left: -15px;
-
     .nav-link {
       color: #222222;
       font-weight: 600;
@@ -206,50 +210,7 @@ textarea {
       cursor: pointer;
     }
 
-    .nav-item {
-      position: relative;
-      padding: 14px 0;
-
-      &.withSubmenu .nav-link:after {
-        content: url("../media/shevron.svg");
-        position: absolute;
-        top: 5px;
-        right: 5px;
-      }
-
-      &:hover {
-        .drop-menu {
-
-          visibility: visible;
-          opacity: 1;
-          z-index: 1;
-          transform: translateY(0%);
-          transition-delay: 0s, 0s, 0.3s;
-        }
-
-        .nav-link {
-          color: $color-blue;
-        }
-      }
-
-      &:after {
-        content: '';
-        position: absolute;
-        height: 4px;
-        background: $color-blue;
-        top: calc(100% - 2px);
-        transition: all 0.2s ease-in-out;
-        right: 0;
-        width: 0;
-        z-index: 2;
-
-        &:hover:after {
-          left: 0;
-          right: auto;
-          width: 100%
-        }
-      }
-    }
+    
 
     .nav-item.withSubmenu:hover .nav-link:after {
       content: url("../media/shevron2_hover.svg");
@@ -257,18 +218,7 @@ textarea {
   }
 
   .drop-menu {
-    padding: 30px 20px;
-    box-shadow: 0 3px 8px #C4C4C4;
-    border-radius: 4px;
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    transform: translateY(-2em);
-    z-index: -1;
-    transition: all 0.5s ease-in-out 0s, visibility 0s linear 0.5s, z-index 0s linear 0.01s, color 0.2s 0.5s;
-    background-color: #FFFFFF;
+   
 
     ul {
       list-style-type: none;
@@ -318,6 +268,18 @@ textarea {
       height: 100%;
     }
   }
+}
+
+.close-menu-btn {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 13px;
+  right: 12px;
+  border: none;
+  background: url(../media/close.svg) #ffffff;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .allow-files {
