--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -7,9 +7,11 @@
 
 .top_banner_slider {
   .banner {
-    background-color: $color-light-blue;
+    //background-color: #B8E9FF;
     height: calc(100vh - 72px);
-
+background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     h1 {
       color: $color-violet;
       max-width: 500px;
@@ -36,7 +38,7 @@
     list-style: none;
     position: absolute;
     right: 9px;
-    top: calc(50% - 25px);
+    top: 30px;
     text-align: right;
     padding: 0;
     margin: 0;
@@ -55,6 +57,12 @@
 
     .slick-active button {
       width: 40px;
+      text-indent: -60px;
+      line-height: 0;
+      font-size: 18px;
+      font-family: $raleway;
+      font-weight: $extrabold;
+      color: $color-violet;
     }
   }
 
@@ -92,9 +100,12 @@
 
 
 .section-wrapper {
-  background-color: $color-grey;
+  background: url("../media/wave-bg.svg") $color-grey;
   padding-bottom: 260px;
   position: relative;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: contain;
 }
 
 .home-catalog {
