--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -70,6 +70,10 @@
       max-height: 248px;
     }
   }
+
+  .top_banner_slider_arrowsBox {
+    display: none;
+  }
 }
 
 @media (max-width: 767.98px) {
