--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -62,10 +62,12 @@
     h1 {
       margin-bottom: 44px;
     }
+
     .docs-grid p {
       font-size: 12px;
       line-height: 18px;
     }
+
     .docs-grid .card img {
       max-height: 248px;
     }
@@ -190,6 +192,7 @@
     .header-btm .drop-menu ul a {
       white-space: normal;
     }
+
     .dropdown-item {
       white-space: normal;
     }
@@ -291,15 +294,63 @@
     h1 {
       margin-bottom: 48px;
     }
+
     .docs-grid .card {
       padding: 30px 15px 14px;
     }
+  }
+  .header-btm {
+    .form-btn.gradient-btn {
+      span {
+        display: none;
+      }
+
+      background: none;
+      position: relative;
+      width: 30px;
+      height: 30px;
+      margin-right: 15px;
+
+      &:after {
+        content: '\f059';
+        font-family: $font-awesome;
+        color: $color-violet;
+        font-size: 28px;
+
+        &:hover {
+          background: $color-blue;
+        }
+      }
+    }
+  }
+  .header-btm .phones-block {
+    &:before {
+      color: $color-violet;
+    }
+
+    .more_btn {
+      background: none;
+      margin-left: -23px;
+    }
+  }
+  header .header-btm .container {
+    justify-content: flex-end;
+
+    .logo, .logo-sm {
+      margin-right: auto;
+    }
+  }
+  .header-btm .open-search {
+    margin-right: 15px;
+  }
+  header .phones-popup {
+    right: -150px;
   }
 }
 
 
 @media (max-width: 1199.98px) {
-  .header-btm {
+  header .header-btm {
     .navbar-collapse {
       position: fixed;
       overflow-y: auto;
@@ -313,19 +364,23 @@
 
       .nav {
         flex-direction: column;
+
         .nav-item {
-            .nav-link {
-              border-left: 4px solid #FFFFFF;
+          .nav-link {
+            border-left: 4px solid #FFFFFF;
+
+            &:after {
+              right: -20px;
+            }
+
+            &.active {
+              border-left: 4px solid $color-light-blue;
+
               &:after {
-                right: 30px;
-              }
-              &.active{
-                border-left: 4px solid $color-light-blue;
-                &:after {
-                  content: url("../media/shevron2_hover.svg");
-                }
+                content: url("../media/shevron2_hover.svg");
               }
             }
+          }
         }
       }
 
@@ -337,9 +392,11 @@
       overflow: hidden;
       padding: 0;
       margin-left: 37px;
+
       ul {
         height: 0;
         overflow: hidden;
+
         &.opened {
           height: auto;
         }
@@ -352,22 +409,34 @@
       &.show {
         height: auto;
       }
+      .dropdown-item {
+        display: table;
+        width: auto;
+      }
     }
 
     .nav-item:hover:after {
       display: none
     }
+
     nav {
       order: 3;
     }
   }
-  .form-btn.gradient-btn {
-    margin-top: 35px;
-    margin-left: 19px;
+
+  .openSubmenu {
+    width: 25px;
+    height: 25px;
+    background: url("../media/shevron.svg") no-repeat center;
+    display: inline-block;
+    margin-bottom: -8px;
+    margin-left: 5px;
   }
+
   .header-top {
     display: none;
   }
+
   .contacts-col {
     margin-bottom: 60px;
   }
@@ -394,13 +463,14 @@
       }
     }
   }
-  header{
+  header {
     .location {
       margin-left: 20px;
       margin-top: 23px;
       margin: 20px 0 20px 20px;
+
       a.active {
-      color: $color-blue;
+        color: $color-blue;
       }
     }
   }
@@ -436,16 +506,18 @@
 }
 
 @media (min-width: 1200px) {
-  .header-btm {
+  header .header-btm {
     .drop-menu {
 
       &.with-columns {
         display: flex;
       }
     }
+
     .nav {
       margin-left: -15px;
     }
+
     .nav-item {
       position: relative;
       padding: 14px 0;
@@ -468,6 +540,12 @@
         }
       }
 
+      &:hover:after {
+        left: 0;
+        right: auto;
+        width: 100%
+      }
+
       &:after {
         content: '';
         position: absolute;
@@ -478,16 +556,11 @@
         right: 0;
         width: 0;
         z-index: 2;
-
-        &:hover:after {
-          left: 0;
-          right: auto;
-          width: 100%
-        }
       }
     }
+
     .drop-menu {
-      padding: 30px 20px;
+      padding: 30px 0;
       box-shadow: 0 3px 8px #C4C4C4;
       border-radius: 4px;
       visibility: hidden;
@@ -499,7 +572,46 @@
       z-index: -1;
       transition: all 0.5s ease-in-out 0s, visibility 0s linear 0.5s, z-index 0s linear 0.01s, color 0.2s 0.5s;
       background-color: #FFFFFF;
+
+
+        ul li {
+          border-left: 4px solid #FFFFFF;
+          padding-left: 30px;
+          margin-left: -10px;
+          &:hover {
+            border-left: 4px solid $color-light-blue;
+          }
+        }
+        .dropdown-item {
+          padding-left: 16px;
+          border-left: 4px solid #FFFFFF;
+          &:hover {
+            border-left: 4px solid $color-light-blue;
+          }
+        }
+
+      .menu-column:last-child {
+        ul li {
+          border-right: 4px solid #FFFFFF;
+          padding-right: 30px;
+          padding-left: 15px;
+          border-left: none;
+          &:hover {
+            border-right: 4px solid $color-light-blue;
+          }
+        }
+        .dropdown-item {
+          padding-right: 16px !important;
+          border-right: 4px solid #FFFFFF;
+          border-left: none;
+          padding-left: 0;
+          &:hover {
+            border-right: 4px solid $color-light-blue;
+          }
+        }
+      }
     }
+
   }
   header.scrolled .header-btm {
     .logo-sm {
@@ -508,6 +620,11 @@
   }
   .close-menu-btn {
     display: none;
+  }
+  .priority-phones {
+    li:first-child {
+      margin-right: 25px;
+    }
   }
 }
 
