--- a/scss/main.scss
+++ b/scss/main.scss
@@ -150,9 +150,13 @@ button {
 .phones-block {
   display: flex;
   margin-right: 15px;
+  position: relative;
 
-  &>a:first-child {
-    margin-right: 25px;
+  .priority-phones {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
   }
 
   &:before {
@@ -168,68 +172,62 @@ button {
   width: 30px;
   height: 22px;
   padding: 0;
-  img {
-    max-width: 100%;
-  }
 }
 
 .header-top-right {
   display: flex;
   align-items: center;
-  .phones-block {
-    position: relative;
+}
+.phones-popup {
+  display: none;
+  padding: 25px 36px;
+  position: absolute;
+  top: calc(100% + 10px);
+  right: -70px;
+  font-size: 15px;
+  width: 338px;
+  background: $color-violet;
+  border-radius: 4px;
+  color: #C4C4C4;
+  z-index: 10;
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
   }
-  .more_btn {
-    cursor: pointer;
-    width: 30px;
-    height: 25px;
-    background: url(../media/shevron.svg) no-repeat center;
-  }
-  .phones-popup {
-    padding: 25px 36px;
-    position: absolute;
-    top: calc(100% + 10px);
-    right: -50px;
+  a {
     font-size: 15px;
-    max-width: 338px;
-    background: $color-violet;
-    border-radius: 4px;
-    color: #C4C4C4;
-    z-index: 10;
-    ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
-    a {
-      font-size: 15px;
-      color: #FFFFFF;
-      line-height: 31px;
-    }
-    .border-line {
-      border-top: 1px solid #61C2EF;
-      margin: 20px -36px 30px;
-    }
-    .phones-header {
-      margin-bottom: 10px;
-    }
-    span {
-      font-size: 12px;
-      line-height: 18px;
-    }
-    .popup-arrow {
-      position: absolute;
-      top: -7px;
-      left: calc(50% - 3px);
-      border-left: 6px solid transparent;
-      border-right: 6px solid transparent;
-      border-bottom: 7px solid #2F3370;
-      width: 0;
-      height: 0;
-    }
+    color: #FFFFFF;
+    line-height: 31px;
+  }
+  .border-line {
+    border-top: 1px solid #61C2EF;
+    margin: 20px -36px 30px;
+  }
+  .phones-header {
+    margin-bottom: 10px;
+  }
+  span {
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .popup-arrow {
+    position: absolute;
+    top: -7px;
+    left: calc(50% - 3px);
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 7px solid #2F3370;
+    width: 0;
+    height: 0;
   }
 }
-
+.more_btn {
+  cursor: pointer;
+  width: 30px;
+  height: 25px;
+  background: url(../media/shevron.svg) no-repeat center;
+}
 .location {
   color: #ffffff;
 
@@ -246,7 +244,7 @@ button {
 .header-btm {
   height: 68px;
   background-color: #FFFFFF;
-
+  border-bottom: 1px solid #61C2EF;
   .container {
     height: 100%;
     display: flex;
