--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -368,3 +368,23 @@
     overflow: hidden;
   }
 }
+
+//===========NO SEARCH RESULTS PAGE============
+
+.no-search-results {
+  h2 {
+    font-family: $open-sans;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    text-transform: uppercase;
+    color: $color-blue;
+    max-width: 460px;
+    margin: 130px auto 43px;
+  }
+  .search-img {
+    margin: 72px auto;
+    text-align: center;
+  }
+
+}
