--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -380,7 +380,7 @@
     text-transform: uppercase;
     color: $color-blue;
     max-width: 460px;
-    margin: 130px auto 43px;
+    margin: 0 auto 43px;
   }
   .search-img {
     margin: 72px auto;
