--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -54,9 +54,6 @@
     &.withDropMenu.opened:after {
       content: url(../media/shevron2_hover.svg);
     }
-    &.withDropMenu:hover > a:after {
-      opacity: 0.2;
-    }
   }
 
   li.withDropMenu {
@@ -65,6 +62,9 @@
       display: flex;
       align-items: center;
       min-height: 42px;
+      width: available;
+      width: -moz-available;
+      width: -webkit-fill-available;
       &:after {
         content: '';
         position: absolute;
@@ -73,7 +73,7 @@
         width: 1px;
         height: 100%;
         background-color: #222222;
-        opacity: 0;
+        opacity: 0.2;
       }
     }
   }
