--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -139,6 +139,7 @@
     position: relative;
     z-index: 0;
     overflow: hidden;
+    border: none;
     &:before {
       content: "";
       position: absolute;
@@ -198,7 +199,11 @@
     background: #FFFFFF;
     box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
     border-radius: 4px;
-    padding: 15px;
+    border: none;
+    a {
+      padding: 15px;
+      height: 100%;
+    }
     p {
       line-height: 29px;
       font-size: 18px;
@@ -222,7 +227,7 @@
       color: #7F899D;
     }
 
-    a {
+    span.link--arrowed {
       margin-right: auto;
       margin-left: calc(100% - 30px);
       width: 30px;
@@ -267,7 +272,7 @@
       margin-bottom: 32px;
     }
 
-    a {
+    span.link--arrowed {
       position: absolute;
       bottom: 20px;
       right: 15px;
