--- a/scss/_news-item.scss
+++ b/scss/_news-item.scss
@@ -101,6 +101,7 @@
     padding: 0 15px;
     width: 100%;
     height: 232px;
+    object-fit: cover;
   }
   .slick-dots {
     list-style-type: none;
