--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -638,6 +638,23 @@
         width: 0;
         z-index: 2;
       }
+      &.current-link {
+        .nav-link {
+          color: $color-blue;
+        }
+        &:after {
+          content: '';
+          position: absolute;
+          height: 4px;
+          background: $color-blue;
+          top: calc(100% - 2px);
+          transition: all 0.2s ease-in-out;
+          left: 0;
+          right: auto;
+          width: 100%;
+          z-index: 2;
+        }
+      }
     }
 
     .drop-menu {
