--- a/scss/_news.scss
+++ b/scss/_news.scss
@@ -1,5 +1,5 @@
 .news {
-  background: linear-gradient(179.14deg, rgba(245, 245, 245, 0.6) 7.74%, #FFFFFF 91.34%);
+  background: url("../media/news-bg.png") no-repeat right top, linear-gradient(179.14deg, rgba(245, 245, 245, 0.6) 7.74%, #FFFFFF 91.34%);
   position: relative;
 }
 
