--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,12 +1,12 @@
 @import "vars";
 
 .section1 .slick-slider .slick-list {
-  transform:rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .section1 .slick-initialized .slick-slide {
   display: flex;
-  transform:rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .top_banner_slider {
@@ -14,6 +14,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+
     h1 {
       color: $color-violet;
       max-width: 500px;
@@ -132,12 +133,13 @@
     border-radius: 4px;
     box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
     min-height: 240px;
-    padding: 15px;
+
     text-align: center;
     position: relative;
     z-index: 0;
     overflow: hidden;
     border: none;
+
     &:before {
       content: "";
       position: absolute;
@@ -157,9 +159,21 @@
       .go-corner {
         background: transparent;
       }
+
       &:before {
         transform: scale(28);
       }
+    }
+
+    a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 15px;
+      height: 100%;
+      height: available;
+      height: -webkit-fill-available;
+
     }
 
     img {
@@ -187,10 +201,17 @@
   display: flex;
   flex-wrap: wrap;
   margin-left: -32px;
+
   .card {
     margin: 0 0 32px 32px;
     width: calc(33.3333% - 32px);
+    img {
+      width: auto;
+      height: 240px;
+      object-fit: none;
+    }
   }
+
   .card,
   .card-sm {
     position: relative;
@@ -198,10 +219,12 @@
     box-shadow: 0 0 8px rgba(196, 196, 196, 0.5);
     border-radius: 4px;
     border: none;
+
     a {
       padding: 15px;
       height: 100%;
     }
+
     p {
       line-height: 29px;
       font-size: 18px;
@@ -231,6 +254,7 @@
       width: 30px;
       height: 30px;
     }
+
     &:hover {
       .arrow-icon {
         transform: translate3d(5px, 0, 0);
@@ -239,6 +263,7 @@
       .arrow-icon--circle {
         stroke-dashoffset: 0;
       }
+
       p {
         color: $color-violet;
       }
@@ -250,10 +275,8 @@
     margin: 0 0 32px 32px;
     width: calc(33.3333% - 32px);
   }
+
   .card-sm {
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 53px;
     min-height: calc(50% - 16px);
 
     img {
@@ -275,8 +298,14 @@
       bottom: 20px;
       right: 15px;
     }
+
+    a {
+      display: flex;
+      padding-bottom: 53px;
+    }
   }
-  }
+}
+
 @-moz-document url-prefix() {
   .news-flex .card-sm p,
   .news-flex .card p {
@@ -284,6 +313,7 @@
     overflow: hidden;
   }
 }
+
 .link--arrowed {
   display: inline-block;
   height: 2rem;
@@ -305,17 +335,20 @@
     stroke-dashoffset: 95;
   }
 }
+
 .news-page-link {
   margin-top: 48px;
   text-align: center;
   position: absolute;
   width: 100%;
   z-index: 1;
+
   .cta {
     position: relative;
     margin: auto;
     padding: 19px 22px;
     transition: all .2s ease;
+
     &:before {
       content: "";
       position: absolute;
@@ -354,11 +387,13 @@
     &:hover {
       &:before {
         width: 100%;
+
         img {
           transform: translateX(0)
         }
       }
     }
+
     &:active {
       transform: scale(.96)
     }
@@ -385,6 +420,7 @@
     max-width: 460px;
     margin: 0 auto 43px;
   }
+
   .search-img {
     margin: 72px auto;
     text-align: center;
