--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,4 @@
+@import "preloader";
 @import "home";
 @import "catalog";
 @import "product";
@@ -839,3 +840,19 @@ footer {
   font-family: sans-serif;
 }
 
+//---------- ANCHOR ---------
+#anchor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background: #F5F5F5;
+  box-shadow: 0 0 8px #C4C4C4;
+  position: fixed;
+  right: 216px;
+  bottom: 100px;
+  z-index: 10;
+  cursor: pointer;
+}
