--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -565,6 +565,9 @@
   .catalog .filter-btn {
     display: none;
   }
+  .about {
+    background: url("../media/about_bg.png") no-repeat 50% 95%;
+  }
 }
 
 @media (min-width: 992px) {
