--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -14,6 +14,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
 
     h1 {
       color: $color-violet;
