--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,16 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
 
+@font-face {
+  font-family: 'GothamProBlack';
+  src: url('../fonts/GothamProBlack/GothamProBlack.eot');
+  src: local('GothamProBlack'), local('GothamProBlack'),
+  url('../fonts/GothamProBlack/GothamProBlack.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/GothamProBlack/GothamProBlack.woff') format('woff'),
+  url('../fonts/GothamProBlack/GothamProBlack.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
 
 body {
   font-family: $open-sans;
@@ -28,10 +38,10 @@ main {
 }
 
 h1 {
-  font-family: $raleway;
+  font-family: 'GothamProBlack';
   font-weight: $extrabold;
-  font-size: 48px;
-  line-height: 64px;
+  font-size: 36px;
+  line-height: 48px;
   color: $color-violet;
 }
 
