--- a/scss/main.scss
+++ b/scss/main.scss
@@ -103,7 +103,7 @@ button {
   color: #FFFFFF;
   text-transform: uppercase;
   letter-spacing: 0.08em;
-  width: 197px;
+  padding: 0 20px;
   height: 48px;
   border-radius: 30px;
   background: linear-gradient(90deg, #0085E6 0%, #61C2EF 100%);
