--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -15,9 +15,9 @@
     background-size: cover;
     background-position: center;
     a {
-      display: block;
-      width: 100%;
-      height: 100%;
+      //display: block;
+      //width: 100%;
+      //height: 100%;
     }
 
     h1 {
@@ -35,10 +35,6 @@
     .container {
       display: flex;
       align-items: center;
-    }
-
-    img {
-      margin-right: 55px;
     }
   }
 
