--- a/scss/main.scss
+++ b/scss/main.scss
@@ -141,12 +141,11 @@ button {
 
 .border-btn {
   cursor: pointer;
-  padding: 12px 0;
+  padding: 12px 20px;
   text-align: center;
   color: $color-violet;
   text-transform: uppercase;
   letter-spacing: 0.08em;
-  width: 197px;
   height: 48px;
   border: 1px solid $color-blue;
   border-radius: 30px;
