--- a/scss/_offices.scss
+++ b/scss/_offices.scss
@@ -1,23 +1,42 @@
 .offices {
   background: #F5F5F5;
+
   h1 {
     margin-bottom: 77px;
   }
+
   h2 {
     margin-bottom: 35px;
   }
+
   ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
+
   .contact-person {
     margin-top: 30px;
   }
+
   .map-wrap {
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
+    margin-top: 71px;
+    height: 600px;
+
+    .container {
+      display: flex;
+      justify-content: center;
+      height: 100%;
+      overflow-y: hidden;
+
+      iframe {
+        height: 100%;
+        width: 100%;
+        margin-top: -46px;
+        border: none;
+      }
+    }
+
   }
 
 }
