--- a/scss/_offices.scss
+++ b/scss/_offices.scss
@@ -22,7 +22,7 @@
   .map-wrap {
     margin-top: 71px;
     height: 600px;
-
+    width: 1000%;
     .container {
       display: flex;
       justify-content: center;
