--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,7 +34,6 @@ body {
 
 main {
   min-height: calc(100vh - 178px);
-  //padding-top: 15px;
 }
 
 h1 {
@@ -655,24 +654,61 @@ header {
   left: 0;
   z-index: 5;
   width: 100%;
-  animation: smoothScroll 0.3s forwards;
+  animation: fadeIn 0.3s;
 
   .header-top {
     display: none;
   }
   .header-btm {
-    box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.5);
+    box-shadow: 0 4px 4px rgba(196, 196, 196, 0.5);
     border-bottom: none;
   }
 }
 }
-@keyframes smoothScroll {
-	0% {
-		transform: translateY(-40px);
-	}
-	100% {
-		transform: translateY(0px);
-	}
+
+@keyframes fadeIn{
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
 }
 //--------FOOTER-----------
 
