--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -254,9 +254,6 @@
       margin: 0 0 30px 0 !important;
     }
   }
-  .news {
-    background: linear-gradient(89.24deg, #FFFFFF 3.49%, rgba(97, 194, 239, 0.4) 99.37%);
-  }
   header .header-btm {
     .logo-sm {
       display: block;
@@ -324,8 +321,23 @@
     }
   }
   .design-pr {
-    display: none;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 15px;
+    span {
+      max-width: 100%;
+      word-break: break-word;
+    }
+    .md-none {
+      display: none;
+    }
   }
+
+  .program-descr {
+    .md-none {
+      display: none;
+    }
+  }
+
   body footer {
     .footer-info {
       margin-top: 40px;
